PROJECT(TkDnD)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/generic)
SET(TkDnD_SRCS
  ${CMAKE_CURRENT_SOURCE_DIR}/generic/tkDND.c
  ${CMAKE_CURRENT_SOURCE_DIR}/generic/tkDNDBind.c
)
SET_SOURCE_FILES_PROPERTIES(
  ${CMAKE_CURRENT_SOURCE_DIR}/generic/tkDND.c
  ${CMAKE_CURRENT_SOURCE_DIR}/generic/tkDNDBind.c
  PROPERTIES LANGUAGE CXX)

IF(WIN32)
  INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/win)
  SET(TkDnD_SRCS ${TkDnD_SRCS}
    ${CMAKE_CURRENT_SOURCE_DIR}/win/OleDND.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/win/tkOleDND.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/win/tkOleDND_TEnumFormatEtc.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/win/tkShape.cpp
    )
  SET_SOURCE_FILES_PROPERTIES(
    ${CMAKE_CURRENT_SOURCE_DIR}/win/OleDND.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/win/tkOleDND.cpp
    COMPILE_FLAGS "-DDND_ENABLE_DROP_TARGET_HELPER") 
ELSE(WIN32)
  #INCLUDE_DIRECTORIES(${VTK_TK_INTERNAL_DIR})
  INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/unix)
  SET(TkDnD_SRCS ${TkDnD_SRCS}
    ${CMAKE_CURRENT_SOURCE_DIR}/unix/Motif.c
    ${CMAKE_CURRENT_SOURCE_DIR}/unix/tkXDND.c
    ${CMAKE_CURRENT_SOURCE_DIR}/unix/XDND.c
    ${CMAKE_CURRENT_SOURCE_DIR}/unix/Motif/lib/Dnd.c
    ${CMAKE_CURRENT_SOURCE_DIR}/unix/Motif/lib/Target.c
    )
ENDIF(WIN32)

ADD_LIBRARY(kwtkdnd STATIC ${TkDnD_SRCS})
TARGET_LINK_LIBRARIES(kwtkdnd ${TCL_LIBRARY} ${TK_LIBRARY})
